<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_XL"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:text="Who is your Jack?"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_XL"
                android:textSize="17sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/content_ambassador"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_S"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/gap_S"
                    android:textColor="@color/hint_color"
                    android:textSize="14sp"
                    android:text="@string/hint_ambassador"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:padding="@dimen/gap_S"
                    android:textColor="@color/hint_color"
                    android:textSize="14sp"
                    android:clickable="true"
                    android:text="@string/hint_call"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/gap_XL"
                android:layout_marginRight="@dimen/gap_XL"
                android:layout_marginTop="@dimen/gap_XXXL"
                android:orientation="vertical">
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Code"/>

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/txtCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/btnValidate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:layout_marginBottom="@dimen/gap_big"
                android:layout_marginLeft="@dimen/gap_XXXL"
                android:layout_marginRight="@dimen/gap_XXXL"
                android:text="Validate"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/round_button_background_red"
                android:clickable="true"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/alphaView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            android:background="#bf000000"/>

        <RelativeLayout
            android:id="@+id/slideView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <include layout="@layout/contact" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
